--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,87 @@
 <resources>
     <string name="app_name">MobileChess</string>
+    <string-array name="piece_names">
+        <item>BLACK_ROOK</item>
+        <item>BLACK_KNIGHT</item>
+        <item>BLACK_BISHOP</item>
+        <item>BLACK_PAWN</item>
+        <item>BLACK_QUEEN</item>
+        <item>BLACK_KING</item>
+        <item>WHITE_ROOK</item>
+        <item>WHITE_KNIGHT</item>
+        <item>WHITE_BISHOP</item>
+        <item>WHITE_PAWN</item>
+        <item>WHITE_QUEEN</item>
+        <item>WHITE_KING</item>
+    </string-array>
+    <string-array name="piece_locations">
+        <item>A1</item>
+        <item>A2</item>
+        <item>A3</item>
+        <item>A4</item>
+        <item>A5</item>
+        <item>A6</item>
+        <item>A7</item>
+        <item>A8</item>
+        <item>B1</item>
+        <item>B2</item>
+        <item>B3</item>
+        <item>B4</item>
+        <item>B5</item>
+        <item>B6</item>
+        <item>B7</item>
+        <item>B8</item>
+        <item>C1</item>
+        <item>C2</item>
+        <item>C3</item>
+        <item>C4</item>
+        <item>C5</item>
+        <item>C6</item>
+        <item>C7</item>
+        <item>C8</item>
+        <item>D1</item>
+        <item>D2</item>
+        <item>D3</item>
+        <item>D4</item>
+        <item>D5</item>
+        <item>D6</item>
+        <item>D7</item>
+        <item>D8</item>
+        <item>E1</item>
+        <item>E2</item>
+        <item>E3</item>
+        <item>E4</item>
+        <item>E5</item>
+        <item>E6</item>
+        <item>E7</item>
+        <item>E8</item>
+        <item>F1</item>
+        <item>F2</item>
+        <item>F3</item>
+        <item>F4</item>
+        <item>F5</item>
+        <item>F6</item>
+        <item>F7</item>
+        <item>F8</item>
+        <item>G1</item>
+        <item>G2</item>
+        <item>G3</item>
+        <item>G4</item>
+        <item>G5</item>
+        <item>G6</item>
+        <item>G7</item>
+        <item>G8</item>
+        <item>H1</item>
+        <item>H2</item>
+        <item>H3</item>
+        <item>H4</item>
+        <item>H5</item>
+        <item>H6</item>
+        <item>H7</item>
+        <item>H8</item>
+    </string-array>
+    <string-array name="piece_sides">
+        <item>WHITE</item>
+        <item>BLACK</item>
+    </string-array>
 </resources>
